@@ -224,6 +224,8 @@ always relevant)
 
 -type answer
 
+-option to search in tag tree?
+
 -new learning modes for initial learning of tag? multiple choice? Select audio?
 
 -gamification? userinfuser, habitica
